Improve startup time with virtual thread